prod_snapshot_2015-09-24_1030/objects/Market_Product_List__c.object
<CustomObject>
    <fields>
        <fullName>Charge_Cycle__c</fullName>
        <label>Charge Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1x Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_Rate__c</fullName>
        <label>Charge Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Market_Product_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Includes__c</fullName>
        <label>Includes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <inlineHelpText>Long Description Of Product</inlineHelpText>
        <label>Product Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Prod List</label>
    <nameField>
        <label>Product Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prod List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>